[package]
name = "typey_birb"
version = "0.6.1"
edition = "2021"
repository = "https://github.com/rparrett/typey_birb"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = ["bevy/bevy_remote"]

[dependencies]
bevy = { version = "0.17", features = ["jpeg"] }
bevy_pipelines_ready = { version = "0.7" }
bevy_simple_prefs = { version = "0.7" }

rand = "0.9"

# Disable low-severity logs at compile time for performance.
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }


[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.dist]
inherits = "release"
lto = "thin"

[profile.web-dist]
inherits = "dist"
opt-level = "s"
